# Bazel build for the control-op executor.
#
# `ControlOpExecutor` is the route-typed adapter for the
# `kControlOp` route -- DDL, metadata, and catalog ops that bypass
# the DuckDB SQL evaluator entirely. It mutates the storage layer
# directly (CREATE TABLE / DROP TABLE / ANALYZE) and lowers the few
# shapes that need DuckDB SQL as an implementation primitive (CTAS)
# through a per-query in-memory DuckDB connection. See plan
# `docs/ENGINE_POLICY.md`.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "control_op_executor",
    srcs = [
        "control_op_ddl.cc",
        "control_op_executor.cc",
        "control_op_literals.cc",
    ],
    hdrs = [
        "control_op_executor.h",
        "control_op_internal.h",
    ],
    deps = [
        "//backend/catalog:create_function_util",
        "//backend/catalog:googlesql_catalog",
        "//backend/catalog:storage_table",
        "//backend/catalog:udf_registry",
        "//backend/engine",
        "//backend/engine/coordinator:executor",
        "//backend/engine/duckdb:arrow_to_bq",
        "//backend/engine/duckdb/transpiler:transpiler",
        "//backend/engine/duckdb/udf:registrar",
        "//backend/engine/semantic:value",
        "//backend/schema",
        "//backend/schema:googlesql_to_bq",
        "//backend/storage",
        "//proto:emulator_cc_proto",
        "//third_party/duckdb",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/resolved_ast",
        "@googlesql//googlesql/resolved_ast:resolved_node_kind_cc_proto",
    ],
)

# Pipe-DDL handlers. Separate translation units (and thus a
# separate cc_library) so the lint-cap carve-out on
# `control_op_executor.cc` does not block extending the
# control-op surface with the pipe-DDL forms. See file headers
# for the rationale.
cc_library(
    name = "pipe_ddl_handlers",
    srcs = [
        "pipe_create_table.cc",
        "pipe_export_data.cc",
    ],
    hdrs = [
        "pipe_create_table.h",
        "pipe_export_data.h",
    ],
    deps = [
        "//backend/engine",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/resolved_ast",
        "@googlesql//googlesql/resolved_ast:resolved_node_kind_cc_proto",
    ],
)

cc_test(
    name = "control_op_routing_test",
    srcs = ["control_op_routing_test.cc"],
    deps = [
        ":control_op_executor",
        "//backend/catalog:googlesql_catalog",
        "//backend/engine",
        "//backend/storage",
        "//backend/storage/duckdb:duckdb_storage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_test(
    name = "control_op_executor_test",
    srcs = ["control_op_executor_test.cc"],
    deps = [
        ":control_op_executor",
        "//backend/catalog:googlesql_catalog",
        "//backend/engine",
        "//backend/schema",
        "//backend/storage",
        "//backend/storage/duckdb:duckdb_storage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/resolved_ast",
    ],
)
