# Bazel build for the local execution coordinator.
#
# `LocalCoordinatorEngine` (the only `Engine` implementation
# constructed by `binaries/emulator_main`) owns a
# `RouteClassifier` that picks one of the six route dispositions
# (see `backend/engine/disposition.h`) per query, plus one
# `Executor` instance per route. The interface library
# (`:executor`) stays free of GoogleSQL on its link line; the
# classifier and the coordinator pull GoogleSQL in because they
# walk a `ResolvedAST`.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

# Route-typed adapter interface. Header-only-ish (the `.cc` only
# hosts the destructor anchor) so per-route executors can depend on
# it without dragging GoogleSQL along.
cc_library(
    name = "executor",
    srcs = ["executor.cc"],
    hdrs = ["executor.h"],
    deps = [
        "//backend/engine",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ],
)

# Route classifier. Walks a resolved AST and returns one
# `Disposition` per query, plus a structured `RouteDecision` the
# coordinator dispatches on. Consults the per-node-kind and
# per-function disposition registries shipped by
# `execution-disposition-registry.plan.md`; never re-routes at
# runtime.
cc_library(
    name = "route_classifier",
    srcs = ["route_classifier.cc"],
    hdrs = ["route_classifier.h"],
    deps = [
        "//backend/engine:disposition",
        "//backend/engine/duckdb/transpiler:functions",
        "//backend/engine/duckdb/transpiler:node_dispositions",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:function",
        "@googlesql//googlesql/resolved_ast",
    ],
)

# Stub executors covering the three non-DuckDB routes the
# classifier can pick today (`semantic_executor`, `control_op`,
# `unsupported`). Each one returns UNIMPLEMENTED with a
# disposition-aware message pointing at the downstream plan that
# fills in the real behavior; this keeps the coordinator a complete
# dispatcher while plans `semantic-executor-core.plan.md`,
# `control-op-executor.plan.md`, and `specialized-feature-policy.plan.md`
# ship the real implementations.
cc_library(
    name = "stub_executors",
    srcs = ["stub_executors.cc"],
    hdrs = ["stub_executors.h"],
    deps = [
        ":executor",
        "//backend/engine",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_test(
    name = "stub_executors_test",
    srcs = ["stub_executors_test.cc"],
    deps = [
        ":stub_executors",
        "//backend/engine",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:builtin_function_options",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/resolved_ast",
    ],
)

# LocalCoordinatorEngine is the top-level `Engine` implementation
# the emulator binary constructs. It owns the analyzer plumbing,
# the route classifier, and one executor per route. Wired into
# `binaries/emulator_main` by `engine-router-foundation.plan.md`
# step 6.
cc_library(
    name = "local_coordinator_engine",
    srcs = ["local_coordinator_engine.cc"],
    hdrs = ["local_coordinator_engine.h"],
    deps = [
        ":executor",
        ":route_classifier",
        ":stub_executors",
        "//backend/engine",
        "//backend/engine:disposition",
        "//backend/engine/duckdb:duckdb_executor",
        "//backend/schema",
        "//backend/schema:googlesql_to_bq",
        "//backend/storage",
        "//proto:emulator_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/resolved_ast",
        "@googlesql//googlesql/resolved_ast:resolved_node_kind_cc_proto",
    ],
)

# Integration test for the coordinator: exercises a representative
# SELECT round-trip end-to-end (analyze -> classify -> DuckDB
# executor -> Arrow rows) plus a couple of route-dispatch sanity
# checks (unsupported function surfaces UNIMPLEMENTED via the
# UnsupportedExecutor stub; CREATE TABLE preserves the existing
# DDL behavior thanks to the `planned` short-circuit in the
# classifier). See plan
# `.cursor/plans/engine-router-foundation.plan.md` "Tests" for the
# exit criteria.
cc_test(
    name = "local_coordinator_engine_test",
    srcs = ["local_coordinator_engine_test.cc"],
    deps = [
        ":local_coordinator_engine",
        "//backend/catalog:googlesql_catalog",
        "//backend/engine",
        "//backend/schema",
        "//backend/storage",
        "//backend/storage/duckdb:duckdb_storage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "route_classifier_test",
    srcs = ["route_classifier_test.cc"],
    deps = [
        ":route_classifier",
        "//backend/engine:disposition",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
        # `transpiler_test`'s pattern: drive a real `AnalyzeStatement`
        # against a tiny `SimpleCatalog` so the ResolvedAST nodes
        # the classifier sees are exactly the ones the engine sees
        # at runtime.
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:builtin_function_options",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/resolved_ast",
    ],
)
