# Bazel build for the local execution coordinator.
#
# `LocalCoordinatorEngine` (the only `Engine` implementation
# constructed by `binaries/emulator_main`) owns a
# `RouteClassifier` that picks one of the six route dispositions
# (see `backend/engine/disposition.h`) per query, plus one
# `Executor` instance per route. The interface library
# (`:executor`) stays free of GoogleSQL on its link line; the
# classifier and the coordinator pull GoogleSQL in because they
# walk a `ResolvedAST`.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//:googlesql_deps.bzl", "GOOGLESQL_SQL_FUNCTION_DEPS")

package(default_visibility = ["//visibility:public"])

# Route-typed adapter interface. Header-only-ish (the `.cc` only
# hosts the destructor anchor) so per-route executors can depend on
# it without dragging GoogleSQL along.
cc_library(
    name = "executor",
    srcs = ["executor.cc"],
    hdrs = ["executor.h"],
    deps = [
        "//backend/engine",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ],
)

# Route classifier. Walks a resolved AST and returns one
# `Disposition` per query, plus a structured `RouteDecision` the
# coordinator dispatches on. Consults the per-node-kind and
# per-function disposition registries shipped by
# `docs/ENGINE_POLICY.md`; never re-routes at
# runtime.
cc_library(
    name = "route_classifier",
    srcs = [
        "route_classifier.cc",
        "route_classifier_analytic.cc",
        "route_classifier_functions.cc",
        "route_classifier_visitor.cc",
    ],
    hdrs = [
        "route_classifier.h",
        "route_classifier_visitor.h",
    ],
    deps = [
        "//backend/engine:disposition",
        "//backend/engine/duckdb/transpiler:functions",
        "//backend/engine/duckdb/transpiler:node_dispositions",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:function",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/resolved_ast",
        "@googlesql//googlesql/resolved_ast:resolved_node_kind_cc_proto",
    ] + GOOGLESQL_SQL_FUNCTION_DEPS,
)

# Stub executors covering the three non-DuckDB routes the
# classifier can pick today (`semantic_executor`, `control_op`,
# `unsupported`). Each one returns UNIMPLEMENTED with a
# disposition-aware message pointing at the downstream plan that
# fills in the real behavior; this keeps the coordinator a complete
# dispatcher while plans `docs/ENGINE_POLICY.md`,
# `docs/ENGINE_POLICY.md`, and `docs/ENGINE_POLICY.md`
# ship the real implementations.
cc_library(
    name = "stub_executors",
    srcs = ["stub_executors.cc"],
    hdrs = ["stub_executors.h"],
    deps = [
        ":executor",
        ":route_classifier",
        "//backend/engine",
        "//backend/engine:disposition",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_test(
    name = "stub_executors_test",
    srcs = ["stub_executors_test.cc"],
    deps = [
        ":stub_executors",
        "//backend/engine",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:builtin_function_options",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/resolved_ast",
    ],
)

# LocalCoordinatorEngine is the top-level `Engine` implementation
# the emulator binary constructs. It owns the analyzer plumbing,
# the route classifier, and one executor per route. Wired into
# `binaries/emulator_main` by `docs/ENGINE_POLICY.md`
# step 6.
cc_library(
    name = "sql_preprocess",
    srcs = [
        "sql_preprocess.cc",
        "sql_preprocess_as_paren_rewrites.cc",
        "sql_preprocess_rewrites.cc",
        "sql_preprocess_table_decorators.cc",
    ],
    hdrs = [
        "sql_preprocess.h",
        "sql_preprocess_internal.h",
    ],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
    ],
)

_GOOGLESQL_SCRIPTING_SRCS = [
    "script_googlesql_runner.cc",
    "script_row_iterator.cc",
    "script_statement_evaluator.cc",
]

_GOOGLESQL_SCRIPTING_HDRS = [
    "script_googlesql_runner.h",
    "script_row_iterator.h",
    "script_statement_evaluator.h",
]

_GOOGLESQL_SCRIPTING_DEPS = [
    "@googlesql//googlesql/public:evaluator_table_iterator",
    "@googlesql//googlesql/public:function",
    "@googlesql//googlesql/public:parse_resume_location",
    "@googlesql//googlesql/scripting:script_executor",
]

cc_library(
    name = "local_coordinator_analyze",
    srcs = ["local_coordinator_analyze.cc"],
    hdrs = ["local_coordinator_analyze.h"],
    deps = [
        ":sql_preprocess",
        "//backend/catalog:googlesql_catalog",
        "//backend/engine",
        "//backend/engine/semantic:system_variables",
        "//backend/engine/semantic:value",
        "//backend/schema",
        "//backend/schema:googlesql_to_bq",
        "//proto:emulator_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/resolved_ast",
        "@googlesql//googlesql/resolved_ast:resolved_node_kind_cc_proto",
    ],
)

cc_library(
    name = "routine_rehydrate",
    srcs = ["routine_rehydrate.cc"],
    hdrs = ["routine_rehydrate.h"],
    deps = [
        ":local_coordinator_analyze",
        "//backend/catalog:create_function_util",
        "//backend/catalog:googlesql_catalog",
        "//backend/catalog:js_udf_registry",
        "//backend/catalog:python_udf_registry",
        "//backend/catalog:procedure_registry",
        "//backend/catalog:routine_persistence",
        "//backend/catalog:tvf_registry",
        "//backend/catalog:udf_registry",
        "//backend/catalog:udf_registration_catalog",
        "//backend/engine",
        "//backend/storage",
        "@com_google_absl//absl/status",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_library(
    name = "view_rehydrate",
    srcs = ["view_rehydrate.cc"],
    hdrs = ["view_rehydrate.h"],
    deps = [
        ":local_coordinator_analyze",
        "//backend/catalog:googlesql_catalog",
        "//backend/catalog:udf_registration_catalog",
        "//backend/catalog:udf_registry",
        "//backend/catalog:view_registry",
        "//backend/engine",
        "//backend/storage",
        "@com_google_absl//absl/status",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/resolved_ast",
        "@googlesql//googlesql/resolved_ast:resolved_node_kind_cc_proto",
    ],
)

cc_library(
    name = "local_coordinator_engine",
    srcs = [
        "local_coordinator_engine.cc",
        "script_executor.cc",
        "script_executor_internal.cc",
        "script_executor_set.cc",
        "script_execute_immediate.cc",
    ] + _GOOGLESQL_SCRIPTING_SRCS,
    hdrs = [
        "local_coordinator_engine.h",
        "script_executor.h",
        "script_executor_internal.h",
        "script_executor_set.h",
        "script_execute_immediate.h",
    ] + _GOOGLESQL_SCRIPTING_HDRS,
    local_defines = ["BIGQUERY_EMULATOR_HAS_GOOGLESQL_SCRIPTING=1"],
    deps = [
        ":local_coordinator_analyze",
        ":sql_preprocess",
        ":executor",
        ":routine_rehydrate",
        ":route_classifier",
        ":stub_executors",
        "//backend/catalog:create_function_util",
        "//backend/catalog:googlesql_catalog",
        "//backend/catalog:js_udf_registry",
        "//backend/catalog:python_udf_registry",
        "//backend/catalog:procedure_registry",
        "//backend/catalog:routine_persistence",
        "//backend/catalog:view_persistence",
        "//backend/catalog:tvf_registry",
        "//backend/catalog:udf_registry",
        "//backend/catalog:udf_registration_catalog",
        "//backend/catalog:view_registry",
        "//backend/engine",
        "//backend/engine:disposition",
        "//backend/engine/control:control_op_executor",
        "//backend/engine/control/stubs:create_model",
        "//backend/engine/duckdb:duckdb_executor",
        "//backend/engine/semantic:executor",
        "//backend/engine/semantic:expression_column_bindings",
        "//backend/engine/semantic:frame_stack",
        "//backend/engine/semantic:row_source",
        "//backend/engine/semantic:system_variables",
        "//backend/engine/semantic:value",
        "//backend/engine/semantic/script:assert_stmt",
        "//backend/engine/semantic/script:assignment_stmt",
        "//backend/engine/semantic/script:declare_stmt",
        "//backend/engine/semantic/script:script_driver",
        "//backend/catalog:stored_procedure",
        "//backend/schema",
        "//backend/schema:googlesql_to_bq",
        "//backend/storage",
        "//proto:emulator_cc_proto",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:type_cc_proto",
        "@googlesql//googlesql/public:value",
        "@googlesql//googlesql/resolved_ast",
    ] + _GOOGLESQL_SCRIPTING_DEPS + [
        "@com_google_protobuf//:protobuf",
        "@googlesql//googlesql/resolved_ast:resolved_node_kind_cc_proto",
    ],
)

# Integration test for the coordinator: exercises a representative
# SELECT round-trip end-to-end (analyze -> classify -> DuckDB
# executor -> Arrow rows) plus a couple of route-dispatch sanity
# checks (unsupported function surfaces UNIMPLEMENTED via the
# UnsupportedExecutor stub; CREATE TABLE preserves the existing
# DDL behavior thanks to the `planned` short-circuit in the
# classifier). See plan
# `docs/ENGINE_POLICY.md` "Tests" for the
# exit criteria.
cc_test(
    name = "local_coordinator_engine_test",
    srcs = [
        "local_coordinator_engine_core_test.cc",
        "local_coordinator_engine_measure_keys_test.cc",
        "local_coordinator_engine_semantic_test.cc",
        "local_coordinator_engine_test_fixture.h",
    ],
    deps = [
        ":local_coordinator_analyze",
        ":local_coordinator_engine",
        "//backend/catalog:googlesql_catalog",
        "//backend/engine",
        "//backend/schema",
        "//backend/storage",
        "//backend/storage/duckdb:duckdb_storage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "local_coordinator_engine_query_fixes_test",
    srcs = [
        "local_coordinator_engine_query_fixes_test.cc",
        "local_coordinator_engine_test_fixture.h",
    ],
    deps = [
        ":local_coordinator_engine",
        "//backend/catalog:googlesql_catalog",
        "//backend/engine",
        "//backend/schema",
        "//backend/storage",
        "//backend/storage/duckdb:duckdb_storage",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "sql_preprocess_test",
    srcs = ["sql_preprocess_test.cc"],
    deps = [
        ":sql_preprocess",
        "//backend/catalog:create_function_util",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:builtin_function_options",
        "@googlesql//googlesql/public:function",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/resolved_ast:resolved_ast",
    ],
)

cc_test(
    name = "route_classifier_test",
    srcs = [
        "route_classifier_advanced_test.cc",
        "route_classifier_core_test.cc",
        "route_classifier_test_fixture.h",
    ],
    deps = [
        ":route_classifier",
        "//backend/catalog:emulator_builtin_extensions",
        "//backend/catalog:emulator_ml_tvf_extensions",
        "//backend/engine:disposition",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
        # `transpiler_test`'s pattern: drive a real `AnalyzeStatement`
        # against a tiny `SimpleCatalog` so the ResolvedAST nodes
        # the classifier sees are exactly the ones the engine sees
        # at runtime.
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:builtin_function_options",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
        "@googlesql//googlesql/resolved_ast",
    ],
)
